--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource/bangers": "^5.2.8",
+    "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "daisyui": "^5.1.14",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
